# picopegsol

./: CMakeLists.txt  pegsolitaire.c
